executor-distribution/src/main/resources/distr/k8s/base/istio/config/ingress/ingress-mtls-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingressgateway-mtls-@config-fp-name1@-unver
spec:
  exportTo:
    - .
  gateways:
    - ingressgateway-mtls-@fpi-name@-unver
  hosts:
    - ${@fpi-name@.ctr.istio.ingress.route.spec.host.@fpi-name@.appFQDN}
  http:
    - match:
        - uri:
            prefix: /@server.context.path@
      route:
        - destination:
            host: @config-fp-name1@-${distrib.release.version}
            port:
              number: 8080
